<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/nome_utente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/morada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morada"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />

    </LinearLayout>
</RelativeLayout>