<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/identificador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@android:color/black"
            android:text="ID: "
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descri_o"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />

        <TextView
            android:text="Date: "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:id="@+id/textViewDate" />

    </LinearLayout>

    <ImageView
        android:id="@+id/deleteProcedimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_action_delete"
        android:layout_alignParentTop="true"
        android:minWidth="40dp"
        android:minHeight="40dp" />

</RelativeLayout>